“Visual Style – Illustrations”: Fix text wrapping in colored background (#269)
Also making the case study images take 33.33% of the available
column width as middle one is white anyways and we can remove margin in
this specific layout.

--- a/css/wmui-style-guide.dev.css
+++ b/css/wmui-style-guide.dev.css
@@ -904,13 +904,8 @@ sup {
 .illustrations-case-study img {
 	display: block;
 	float: left;
-	width: 31.33%;
-	margin: 0 1%;
+	width: 33.33%;
 }
-
-	.illustrations-case-study img:first-child {
- 		margin-left: 0;
-	}
 
 
 /* ::: Dynamic content ::: */
